--- a/docs/css/webhooks.css
+++ b/docs/css/webhooks.css
@@ -40,6 +40,7 @@ code a span {
   position: relative;
   width: 100%;
   height: 100%;
+  color: black;
 }
 
 #team-overview [data-team] {
@@ -80,6 +81,7 @@ code a span {
   display: block;
   text-transform: uppercase;
   font-family: monospace;
+  background-color: white;
 }
 
 .love-box {
